ARMTemplates/MultiVM/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vnet_name": {
           "type": "string",
           "metadata": {
                "description": "Name of the virtual network"
            }
        },
        "virtual_machine_name": {
           "type": "string",
           "metadata": {
                "description": "Name of the virtual machine"
            }
        },
        "vm_size": {
           "type": "string",
           "metadata": {
                "description": "size of the virtual machine"
            }
        },
        "adminuser": {
           "type": "string",
           "metadata": {
                "description": "description"
            }
        },
        "adminPassword": {
           "type": "string",
           "metadata": {
                "description": "description"
            }
        },
         "count_value": {
           "type": "int"          
        }
    },
    "variables": {
        "tags": {
            "createdy": "Ramakrishna",
            "Environment": "DEV",
            "Project": "SAANVIKIT"
        },
        "public_ip_name": "saanvikit-pubip-01",
        "nsg_name": "saanvikit-nsg-01",
        "vnet_addressPrefixes": ["192.168.0.0/24"],
        "subnet_name": "saanvikit-snet",
        "subnet_addressPrefix": "192.168.0.0/27",
        "nic_name": "saanvikit-nic"
    },
    "resources": [
        {
            "name": "[concat(variables('public_ip_name'),copyIndex())]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "tags": "[variables('tags')]",
            "copy": {
                "name": "PubipCopy",
                "count": "[parameters('count_value')]"
            },
            "properties": {
                "publicIPAllocationMethod": "Dynamic"
            } 
        },
        {
            "name": "[variables('nsg_name')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "description": "HTTP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('vnet_name')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg_name'))]"
            ],
            "tags": "[variables('tags')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": "[variables('vnet_addressPrefixes')]"
                },
                "subnets": [
                    {
                        "name": "[variables('subnet_name')]",
                        "properties": {
                            "addressPrefix": "[variables('subnet_addressPrefix')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg_name'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(variables('nic_name'),copyIndex())]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2020-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('public_ip_name'),copyIndex()))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnet_name'))]"
            ],
            "tags": "[variables('tags')]",
             "copy": {
                "name": "nicCopy",
                "count": "[parameters('count_value')]"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(variables('public_ip_name'),copyIndex()))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnet_name'), variables('subnet_name'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(parameters('virtual_machine_name'),copyIndex())]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2021-03-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('nic_name'),copyIndex()))]"
            ],
            "tags": "[variables('tags')]",
             "copy": {
                "name": "VMCopy",
                "count": "[parameters('count_value')]"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vm_size')]"
                },
                "osProfile": {
                    "computerName": "[concat(parameters('virtual_machine_name'),copyIndex())]",
                    "adminUsername": "[parameters('adminuser')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2022-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[concat(parameters('virtual_machine_name'),'-','osdisk',copyIndex())]",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('nic_name'),copyIndex()))]"
                        }
                    ]
                }
            }
        }
    ],
    "outputs": {}
}
